[gd_scene load_steps=4 format=2]

[ext_resource path="res://buildings/components/WallSet.gd" type="Script" id=1]
[ext_resource path="res://buildings/components/Column.tscn" type="PackedScene" id=2]
[ext_resource path="res://buildings/components/WallBasic.tscn" type="PackedScene" id=3]

[node name="WallSet" type="Spatial"]
script = ExtResource( 1 )

[node name="FirstWall" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.5, 0, 0 )
length = 3.0
update_on_value_change = false

[node name="FirstColumn" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0, -2 )
top_mat = null
sides_mat = null
side_length = 1.0
height = 2.0
update_on_value_change = false
shadow_only_mode = false

[node name="SecondWall" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
length = 8.0
update_on_value_change = false

[node name="SecondColumn" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, -2 )
top_mat = null
sides_mat = null
side_length = 1.0
height = 2.0
update_on_value_change = false
shadow_only_mode = false

[node name="ThirdWall" parent="." instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.5, 0, 0 )
length = 3.0
update_on_value_change = false

[node name="ThirdColumn" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, 2 )
top_mat = null
sides_mat = null
side_length = 1.0
height = 2.0
update_on_value_change = false
shadow_only_mode = false

[node name="FourthColumn" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.5, 0, 2 )
top_mat = null
sides_mat = null
side_length = 1.0
height = 2.0
update_on_value_change = false
shadow_only_mode = false
